src/css/site.css
@font-face {
  font-family: "Basis Grotesque";
  src: url("./fonts/Normal/Basis Grotesque.otf") format("opentype"),
    url("./fonts/Normal/Basis Grotesque.woff") format("woff"),
    url("./fonts/Normal/Basis Grotesque.ttf") format("truetype"),
    url("./fonts/Normal/Basis Grotesque.svg#Basis Grotesque") format("svg");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Basis Grotesque";
  src: url("./fonts/Medium/Basis Grotesque Medium.otf") format("opentype"),
    url("./fonts/Medium/Basis Grotesque Medium.woff") format("woff"),
    url("./fonts/Medium/Basis Grotesque Medium.ttf") format("truetype"),
    url("./fonts/Medium/Basis Grotesque Medium.svg#Basis Grotesque")
      format("svg");
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Basis Grotesque";
  src: url("./fonts/Bold/Basis Grotesque Pro Bold.otf") format("opentype"),
    url("./fonts/Bold/Basis Grotesque Pro Bold.woff") format("woff"),
    url("./fonts/Bold/Basis Grotesque Pro Bold.ttf") format("truetype"),
    url("./fonts/Bold/Basis Grotesque Pro Bold.svg#Basis Grotesque")
      format("svg");
  font-weight: 700;
  font-style: normal;
}

:root {
  --primary: #000000;
  --secondary: #4e4e4e;
  --blue: #0066ff;
  --background: #eef5f5;
  --backgroundsecondary: #fafafa;
  --white: #ffffff;
  --postdate: #707a88;
  --footer: #b1becb;
  --tabborder: #c6c6c6;
}

body {
  background: linear-gradient(180deg, #e3f1f1 0%, rgba(238, 244, 245, 0) 100%)
    no-repeat !important;
  height: 835px;
  left: 0px;
  top: -5px;
}
.bg-hero-pattern {
  background-size: 100%;
  background-repeat: no-repeat;
}
.menu li.has-submenu a:after {
  display: inline-block;
  position: relative;
  content: "";
  top: -3px;
  right: 0;
  margin-left: 6px;
  width: 8px;
  height: 8px;
  transform: rotate(45deg);
  border-right: 2px solid rgba(0, 0, 0);
  border-bottom: 2px solid rgba(0, 0, 0);
}
.menu li.has-submenu a.active:after {
  transform: rotate(225deg);
}
.menu li.has-submenu li a:after {
  display: none;
}
.sub-menu:after {
  content: "";
  position: absolute;
  left: 35px;
  top: -10px;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 0 17px 17px 17px;
  border-color: transparent transparent #ffffff transparent;
  z-index: 9998;
}
.lr-icon::before {
  content: "";
  background: url("../images/arrow-right.svg") no-repeat;
  background-position: center;
  width: 75%;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 10px;
  margin-right: 10px;
}
.lr-icon:hover:before {
  background: url("../images/arrow-right-o.svg") no-repeat;
  background-position: center;
  width: 75%;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 10px;
  margin-right: 10px;
}

.check-icon::before {
  content: "";
  background: url("../images/check.svg") no-repeat;
  background-position: center;
  width: 75%;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 12px;
  margin-right: 10px;
}
.post-arrow::after {
  content: "";
  background: url("../images/short_right.png") no-repeat;
  background-position: center;
  width: 75%;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 10px;
  margin-left: 5px;
}
.bnr-right-icon::before {
  content: "";
  background: url("../images/long-arrow.png") no-repeat;
  background-position: center;
  width: 75%;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 10px;
  margin-right: 10px;
}
.tab-content-item h3 {
  font-size: 28px;
  line-height: 140%;
  color: #0066ff;
  font-weight: bold;
  margin-bottom: 16px;
}
.tab-content-item p {
  font-size: 18px;
  line-height: 160%;
  color: #4e4e4e !important;
  margin-bottom: 24px;
}

.tab-content-item a:hover {
  color: #0066ff !important;
}
.tab-content-item a:hover:before {
  content: "";
  background: url("../images/arrow-right-o.svg") no-repeat;
  background-position: center;
  width: 75%;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 10px;
  margin-right: 10px;
}

.tab-content-item a {
  color: #000000 !important;
}
.tab-content-item a::before {
  content: "";
  background: url("../images/arrow-right.svg") no-repeat;
  background-position: center;
  width: 75%;
  height: 100%;
  top: 0;
  left: 50%;
  padding: 10px;
  margin-right: 10px;
}
.tab-content-item a {
  font-size: 14px;
  line-height: 140%;
  font-weight: bold;
  color: #000000;
}
.frtxt-contnt p {
  margin-bottom: 2rem;
}
.hero-content p {
  color: #4e4e4e;
  font-size: 22px;
  line-height: 160%;
}

.demo-header {
  background: linear-gradient(180deg, #000000 0%, #4e4e4e 100%);
  height: 428px;
  width: 100%;
  text-align: center;
  display: flex;
  justify-content: center;
  background-repeat: no-repeat;
  /* z-index: -2; */
}

.demo-header-bg {
  background-image: url("../images/demo-background.png");
  background-position: bottom right;
  background-size: 640px auto;
  background-repeat: no-repeat;
}

.demo_form {
  background: #ffffff;
  mix-blend-mode: normal;
  border: 1px solid #e1e1e1;
  box-sizing: border-box;
  box-shadow: 0px 16px 40px -3px rgba(0, 0, 0, 0.05);
  border-radius: 12px;
  position: relative;
  /* width: 470px; */
}
.demo_form input {
  height: 40px;
  color: #4e4e4e;
  background: #ffffff;
  border: 1px solid #a7a7a7;
  box-sizing: border-box;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
  border-radius: 8px;
  /* margin-bottom: 24px; */
  padding: 9px 16px;
}
.demo_form input::placeholder {
  color: #a7a7a7;
  font-size: 14px;
}

.demo_form input:focus {
  outline: none !important;
  border-color: #0066ff;
  border: 1px solid #0066ff;
  /* box-shadow: 0px 2px 4px #0066ff; */
}
.demo-submit-background {
  background-image: url("../images/form-submit-header-left.png"),
    url("../images/form-submit-header-right.png");
  background-position: top left, bottom right;
  background-size: 230px auto, 350px auto;
  background-repeat: no-repeat;
}

/* .demo-submit-background-left {
  background-image: url("../images/form-submit-header-left.png");
  background-position: top left;
  background-size: 230px auto;
  background-repeat: no-repeat;
}
.demo-submit-background-right {
  background-image: url("../images/form-submit-header-right.png");
  background-position: bottom right;
  background-size: 350px auto;
  background-repeat: no-repeat;
} */

@custom-media --media-min-small (min-width: 450px);
@custom-media --media-max-small (max-width: 449px);
@custom-media --media-min-medium (min-width: 675px);
@custom-media --media-min-large (min-width: 900px);

.root,
#root,
#docs-root {
  --primary: #000000;
  --secondary: #4e4e4e;
  --accent: #0066ff;
  --background: #eef5f5;
  --main: #0d0106;
  --header: #2d3748;
}
.header {
  height: 60vh;
  max-height: 460px;
}
.testimonials {
  position: relative;
}
/* .bgimg{
  background-image: url("../images/test-bg.png")no-repeat;
  background-size: cover;
  background-position: center top;
} */
/* .usr_img{
  position: relative;
  top: -50px;
} */
/*carosul*/
.testimonials .owl-nav button.owl-prev {
  top: 50% !important;
  position: absolute;
  left: 0px !important;
  background: url("../images/prev.svg") no-repeat !important;
  width: 100%;
  height: 100px;
}
.testimonials .owl-nav button.owl-next {
  top: 50% !important;
  position: absolute;
  right: 0px !important;
  background: url("../images/next.svg") no-repeat !important;
  width: 100%;
  height: 100px;
}
/* .testimonial-slider{
position: relative;
top: -60px;
} */

.block-description p,
.block-description ol,
.block-description ul {
  @apply mt-4;
}
.block-description li {
  @apply mt-3;
}
.block-description h2 {
  @apply mt-8 text-2xl;
}
.block-description h3 {
  @apply mt-6 text-xl;
}

.about-us-banner {
  background: url("../images/aboutus-banner.png");
  background-repeat: no-repeat;
  background-position: right top;
  -webkit-background-size: 51%;
  background-size: 51%;
}

@media only screen and (min-width: 1023px) {
  .menu li.has-submenu:hover a:after {
    transform: rotate(225deg);
    top: 0px;
  }
}

@media only screen and (max-width: 1023px) {
  .about-us-banner {
    background-position: right 10px;
  }
  .menu {
    background-color: #fff !important;
    @apply w-full !important;
  }
  .sub-menu:after {
    display: none;
  }
  .menu li.has-submenu {
    position: relative;
  }
  .menu li.has-submenu a:after {
    position: absolute;
    top: 20px;
  }
}
@media only screen and (max-width: 1120px) {
  .demo-submit-background {
    background-image: url("../images/form-submit-header-right.png");
    background-position: bottom right;
    background-size: 350px auto;

    background-repeat: no-repeat;
  }

  .demo-header-bg {
    background-image: none;
    background-position: bottom right;
    background-size: 640px auto;
    background-repeat: no-repeat;
  }
}
@media only screen and (max-width: 500px) {
  .about-us-banner {
    background: none;
  }
  .bg-hero-pattern {
    -webkit-background-size: cover;
    background-size: cover;
    background-position: center top;
  }

  .demo-submit-background {
    background-image: none;
    background-repeat: no-repeat;
  }
}

